Fixed all exceptions. Work realise